SDK/Delphi/TitanEngine.pas

  function DeleteHardwareBreakPoint(IndexOfRegister:LongInt):boolean; stdcall; external 'TitanEngine.dll' name 'DeleteHardwareBreakPoint';
  function RemoveAllBreakPoints(RemoveOption:LongInt):boolean; stdcall; external 'TitanEngine.dll' name 'RemoveAllBreakPoints';
  function GetProcessInformation(): Pointer; stdcall; external 'TitanEngine.dll' name 'GetProcessInformation';
  function GetStartupInformation(): Pointer; stdcall; external 'TitanEngine.dll' name 'GetStartupInformation';
  procedure DebugLoop(); stdcall; external 'TitanEngine.dll' name 'DebugLoop';
  procedure SetDebugLoopTimeOut(TimeOut:LongInt); stdcall; external 'TitanEngine.dll' name 'SetDebugLoopTimeOut';
  procedure SetNextDbgContinueStatus(SetDbgCode:LongInt); stdcall; external 'TitanEngine.dll' name 'SetNextDbgContinueStatus';
  function AttachDebugger(ProcessId:LongInt; KillOnExit:Boolean; DebugInfo,CallBack:Pointer): Pointer; stdcall; external 'TitanEngine.dll' name 'AttachDebugger';
  function DetachDebugger(ProcessId:LongInt): Pointer; stdcall; external 'TitanEngine.dll' name 'DetachDebugger';
  function DetachDebuggerEx(ProcessId:LongInt): Pointer; stdcall; external 'TitanEngine.dll' name 'DetachDebuggerEx';
  function DebugLoopEx(TimeOut:LongInt): LongInt; stdcall; external 'TitanEngine.dll' name 'DebugLoopEx';
  procedure AutoDebugEx(szFileName:PAnsiChar; ReserveModuleBase:boolean; szCommandLine,szCurrentFolder:PAnsiChar; TimeOut:LongInt; EntryCallBack:Pointer); stdcall; external 'TitanEngine.dll' name 'AutoDebugEx';
  function IsFileBeingDebugged(): boolean; stdcall; external 'TitanEngine.dll' name 'IsFileBeingDebugged';
  procedure SetErrorModel(DisplayErrorMessages:boolean); stdcall; external 'TitanEngine.dll' name 'SetErrorModel';
{TitanEngine.Importer.functions}
  procedure ImporterCleanup(); stdcall;  external 'TitanEngine.dll' name 'ImporterCleanup';
  procedure ImporterSetImageBase(ImageBase:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterSetImageBase';
  procedure ImporterSetUnknownDelta(DeltaAddress:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterSetUnknownDelta';
  function ImporterGetCurrentDelta():LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetCurrentDelta';
  procedure ImporterInit(MemorySize,ImageBase:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterInit';
  procedure ImporterAddNewDll(DLLName:PAnsiChar; FirstThunk:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterAddNewDll';
  procedure ImporterAddNewAPI(APIName:PAnsiChar; FirstThunk:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterAddNewAPI';
  procedure ImporterAddNewOrdinalAPI(dwAPIName,FirstThunk:LongInt); stdcall;  external 'TitanEngine.dll' name 'ImporterAddNewAPI';
  function ImporterGetAddedDllCount(): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAddedDllCount';
  function ImporterGetAddedAPICount(): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAddedAPICount';
  function ImporterGetLastAddedDLLName(): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetLastAddedDLLName';
  procedure ImporterMoveIAT(); stdcall;  external 'TitanEngine.dll' name 'ImporterMoveIAT';
  function ImporterExportIAT(StorePlace,FileMap:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterExportIAT';
  function ImporterEstimatedSize(): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterEstimatedSize';
  function ImporterExportIATEx(szExportFileName,szSectionName:PAnsiChar):boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterExportIATEx';
  function ImporterFindAPIWriteLocation(szAPIName:PAnsiChar): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterFindAPIWriteLocation';
  function ImporterFindOrdinalAPIWriteLocation(OrdinalNumber:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterFindOrdinalAPIWriteLocation';
  function ImporterFindAPIByWriteLocation(APIWriteLocation:PAnsiChar): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterFindAPIByWriteLocation';
  function ImporterFindDLLByWriteLocation(APIWriteLocation:PAnsiChar): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterFindDLLByWriteLocation';
  function ImporterGetDLLName(APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetDLLName';
  function ImporterGetAPIName(APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAPIName';
  function ImporterGetAPIOrdinalNumber(APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAPIOrdinalNumber';
  function ImporterGetAPINameEx(APIAddress:LongInt; pDLLBases:Pointer): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAPINameEx';
  function ImporterGetRemoteAPIAddress(hProcess:THandle; APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetRemoteAPIAddress';
  function ImporterGetRemoteAPIAddressEx(szDLLName,szAPIName:PAnsiChar): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetRemoteAPIAddressEx';
  function ImporterGetLocalAPIAddress(hProcess:THandle; APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetLocalAPIAddress';
  function ImporterGetDLLNameFromDebugee(hProcess:THandle; APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetDLLNameFromDebugee';
  function ImporterGetAPINameFromDebugee(hProcess:THandle; APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAPINameFromDebugee';
  function ImporterGetAPIOrdinalNumberFromDebugee(hProcess:THandle; APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetAPIOrdinalNumberFromDebugee';
  function ImporterGetDLLIndexEx(APIAddress:LongInt; pDLLBases:Pointer): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetDLLIndexEx';
  function ImporterGetDLLIndex(hProcess:THandle; APIAddress:LongInt; pDLLBases:Pointer): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetDLLIndex';
  function ImporterGetRemoteDLLBase(hProcess:THandle; LocalModuleBase:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetRemoteDLLBase';
  function ImporterRelocateWriteLocation(AddValue:LongInt): boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterRelocateWriteLocation';
  function ImporterIsForwardedAPI(hProcess:THandle; APIAddress:LongInt): boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterIsForwardedAPI';
  function ImporterGetForwardedAPIName(hProcess:THandle; APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetForwardedAPIName';
  function ImporterGetForwardedDLLName(hProcess:THandle; APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetForwardedDLLName';
  function ImporterGetForwardedDLLIndex(hProcess:THandle; APIAddress:LongInt; pDLLBases:Pointer): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetForwardedDLLIndex';
  function ImporterGetForwardedAPIOrdinalNumber(hProcess:THandle; APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetForwardedAPIOrdinalNumber';
  function ImporterGetNearestAPIAddress(hProcess:THandle; APIAddress:LongInt): LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterGetNearestAPIAddress';
  function ImporterGetNearestAPIName(hProcess:THandle; APIAddress:LongInt): PAnsiChar; stdcall;  external 'TitanEngine.dll' name 'ImporterGetNearestAPIName';
  function ImporterCopyOriginalIAT(szOriginalFile,szDumpFile:PAnsiChar): boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterCopyOriginalIAT';
  function ImporterLoadImportTable(szFileName:PAnsiChar): boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterLoadImportTable';
  function ImporterMoveOriginalIAT(szOriginalFile,szDumpFile,szSectionName:PAnsiChar): boolean; stdcall;  external 'TitanEngine.dll' name 'ImporterMoveOriginalIAT';
  procedure ImporterAutoSearchIAT(pFileName:PAnsiChar;ImageBase,SearchStart,SearchSize:LongInt;pIATStart,pIATSize:Pointer); stdcall;  external 'TitanEngine.dll' name 'ImporterAutoSearchIAT';
  procedure ImporterAutoSearchIATEx(hProcess:LongInt;ImageBase,SearchStart,SearchSize:LongInt;pIATStart,pIATSize:Pointer); stdcall;  external 'TitanEngine.dll' name 'ImporterAutoSearchIATEx';
  procedure ImporterEnumAddedData(EnumCallBack:Pointer); stdcall;  external 'TitanEngine.dll' name 'ImporterEnumAddedData';
  function ImporterAutoFixIAT(hProcess:LongInt;pFileName:PAnsiChar;ImageBase,SearchStart,SearchSize,SearchStep:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterAutoFixIAT';
  function ImporterAutoFixIATEx(hProcess:LongInt;pFileName,szSectionName:PAnsiChar;DumpRunningProcess,RealignFile:boolean;EntryPointAddress,ImageBase,SearchStart,SearchSize,SearchStep:LongInt;TryAutoFix,FixEliminations:boolean;UnknownPointerFixCallback:LongInt):LongInt; stdcall;  external 'TitanEngine.dll' name 'ImporterAutoFixIATEx';
{TitanEngine.Hooks.functions}
  function HooksSafeTransitionEx(HookAddressArray:Pointer; NumberOfHooks:LongInt; TransitionStart:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksSafeTransitionEx';
  function HooksSafeTransition(HookAddressArray:Pointer; TransitionStart:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksSafeTransition';
  function HooksIsAddressRedirected(HookAddressArray:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksIsAddressRedirected';
  function HooksGetTrampolineAddress(HookAddressArray:Pointer):Pointer; stdcall;  external 'TitanEngine.dll' name 'HooksGetTrampolineAddress';
  function HooksGetHookEntryDetails(HookAddressArray:Pointer):Pointer; stdcall;  external 'TitanEngine.dll' name 'HooksGetHookEntryDetails';
  function HooksInsertNewRedirection(HookAddressArray,RedirectTo:Pointer; HookType:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksInsertNewRedirection';
  function HooksInsertNewIATRedirectionEx(FileMapVA,LoadedModuleBase:LongInt; szHookFunction:PAnsiChar; RedirectTo:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksInsertNewIATRedirectionEx';
  function HooksInsertNewIATRedirection(szModuleName,szHookFunction:PAnsiChar; RedirectTo:Pointer):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksInsertNewIATRedirection';
  function HooksRemoveRedirection(HookAddressArray:Pointer; RemoveAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksRemoveRedirection';
  function HooksRemoveRedirectionsForModule(ModuleBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksRemoveRedirectionsForModule';
  function HooksDisableRedirection(HookAddressArray:Pointer; DisableAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksDisableRedirection';
  function HooksDisableRedirectionsForModule(ModuleBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksDisableRedirectionsForModule';
  function HooksEnableRedirection(HookAddressArray:Pointer; EnableAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksEnableRedirection';
  function HooksEnableRedirectionsForModule(ModuleBase:LongInt):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksEnableRedirectionsForModule';  
  function HooksRemoveIATRedirection(szModuleName,szHookFunction:PAnsiChar; RemoveAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksRemoveIATRedirection';
  function HooksDisableIATRedirection(szModuleName,szHookFunction:PAnsiChar; DisableAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksDisableIATRedirection';
  function HooksEnableIATRedirection(szModuleName,szHookFunction:PAnsiChar; EnableAll:boolean):boolean; stdcall;  external 'TitanEngine.dll' name 'HooksEnableIATRedirection';
